[package]
name = "dx-media"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["DX Team <hello@dx-media.dev>"]
description = "Universal digital asset acquisition engine - One command, any media, from anywhere"
license = "MIT"
repository = "https://github.com/anthropics/dx-media"
homepage = "https://github.com/anthropics/dx-media"
documentation = "https://docs.rs/dx-media"
keywords = ["media", "assets", "download", "cli", "api"]
categories = ["command-line-utilities", "multimedia", "web-programming"]
readme = "README.md"
exclude = [
    "target/",
    ".git/",
    ".github/",
    ".env",
    "*.log",
    "test_*",
    "cache/",
    "temp/",
]

[[bin]]
name = "dx"
path = "src/main.rs"

[lib]
name = "dx_media"
path = "src/lib.rs"

# ═══════════════════════════════════════════════════════════════
# CORE DEPENDENCIES
# ═══════════════════════════════════════════════════════════════

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP & Networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli"] }
url = "2"

# Web Scraping
scraper = "0.22"
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI & Terminal
clap = { version = "4", features = ["derive", "env", "wrap_help", "color"] }
indicatif = "0.17"
console = "0.15"
colored = "2"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File System
tempfile = "3"
directories = "5"
sanitize-filename = "0.6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
once_cell = "1"
strum = { version = "0.26", features = ["derive"] }

# ═══════════════════════════════════════════════════════════════
# DEV DEPENDENCIES
# ═══════════════════════════════════════════════════════════════

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
wiremock = "0.6"

# ═══════════════════════════════════════════════════════════════
# PROFILE OPTIMIZATIONS
# ═══════════════════════════════════════════════════════════════

[profile.release]
lto = true
codegen-units = 1
strip = true
